<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/icon_call"
            android:title="@string/icon_call"/>

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/icon_friends"
            android:title="@string/nav_friends"/>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/icon_location"
            android:title="@string/icon_location"/>
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/icon_mail"
            android:title="@string/icon_mail"/>
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/icon_task"
            android:title="@string/icon_task"/>

        <item
            android:id="@+id/app_updata"
            android:icon="@drawable/icon_task"
            android:title="Check updata"/>
    </group>

</menu>