<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:collapsedTitleTextAppearance="@style/ToolBar.TitleText"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle.About"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:fitsSystemWindows="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/top_header">

                    <ImageView
                        android:id="@+id/vip_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="85dp"
                        android:src="@drawable/logo_app_small"/>

                    <LinearLayout
                        android:id="@+id/vip_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vip_image"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="鹰视眼镜"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/vip_layout"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="3dp"
                        android:text="版本：1.3.3"
                        android:visibility="gone"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"/>
                </RelativeLayout>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetStart="30dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:titleTextAppearance="@style/ToolBar.TitleText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="关于眼镜"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                    android:textSize="16sp"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_comment"
        app:layout_anchor="@id/header"
        app:layout_anchorGravity="bottom|end">

    </android.support.design.widget.FloatingActionButton>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="1.眼镜主要功能介绍"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/qr_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/weichat_qr_code" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="官方微信公众号"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="135dp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce1"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce2"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce3"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce4"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce5"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce6"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce7"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce8"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="2.眼镜辅助功能介绍"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce9"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce10"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce11"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce12"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce13"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce14"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce15"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce16"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="3.关于我们"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce17"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/about_introduce18"
                    android:textColor="@android:color/darker_gray"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/weichat_qr_code" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="官方微信公众号"
                        android:textAlignment="center" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>